# histo_sp_cluster

./: .gitignore  LICENSE  Makefile  README.md  environment.yml  pyproject.toml
configs/: default.yaml  mil_default.yaml  moco_default.yaml
histo_MIL/: config.py
histo_MIL/bioptimus_embeddings/: get_embeddings.py
histo_MIL/data/: cptac_data.py  test_wsi.csv
histo_MIL/get_embeddings/: get_bioptimus_embeddings.py  get_mocov2_embeddings.py  get_model_inference.py  get_resnet_embeddings.py  get_superpixel_cluster_embeddings.py  get_superpixel_embeddings.py
histo_MIL/train/: train.py  train_setup.py
histo_MIL/utils/: __init__.py  dataloader.py  logger.py  loss.py  training_utils.py  utils.py
histo_MIL/visualization/: vis_embeddings.py
histo_sp_cluster_SSL/: Loss.py  clustering.py  config.py  dataloader.py  moco.py  queue_init.py
histo_sp_cluster_SSL/embeddings/: bioptimus_embeddings.py  kmeans_analysis.py  kmeans_embeddings.py
histo_sp_cluster_SSL/train/: train.py  train_setup.py
histo_sp_cluster_SSL/utils/: logger.py  training_utils.py  utils.py  visualization.py
models/: MIL_Attention.py  moco.py
notebooks/: test.ipynb
reports/figures/training_loss_curve/cluster_resnet_bs256_lr0.003_step50_warmup100_epochs100_clusters50_moco_superpixel_cluster/: superpixel_org_loss_curve.txt
reports/tensorboard/cluster_resnet_bs256_lr0.003_step100_warmup200_epochs100_clusters100_moco_superpixel_cluster/: events.out.tfevents.1746019559.lxhultrafast.2750242.0  events.out.tfevents.1746020207.lxhultrafast.2765095.0  events.out.tfevents.1746422890.lxhultrafast.940766.0
(+20 files in other folders)
