[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "histo_sp_cluster"
version = "0.0.1"
description = "This is a self-supervised learning method for the classification of Histology images"
authors = [
  { name = "Darya Ardan medGIFT" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["histo_sp_cluster"]
force_sort_within_sections = true


